--- a/static-site/index.html
+++ b/static-site/index.html
@@ -26,7 +26,7 @@
             <div class="container">
                <div class="col-xl-10 col-xs-12">
                   <a class="navbar-brand" href="#graph-section"><img src="img/logo.svg" class="" alt=""></a>
-                  <span class="text-white font-weight-bold">CLOUD QUIZ</span>
+                  <h6 class="text-white font-weight-bold">CLOUD QUIZ</h6>
                </div>
                <a class="button" href="#graph-section">SIGN IN</a>
             </div>
